--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-loader": "^9.1.3",
     "babel-plugin-import": "^1.13.6",
     "css-loader": "^6.8.1",
+    "dotenv-webpack": "^8.0.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "html-webpack-plugin": "^5.5.3",
